fix IE bugs, fix horizontal scroll wip

--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -78,14 +78,14 @@ $et-backgroundColor-headerDropdownToggle: $et-backgroundColor !default;
 
 $et-horizontalPadding-cell: 20px !default;
 $et-horizontalPadding-headerCell: 20px !default;
-
 $et-verticalPadding-headerCell: 12px !default;
 
 $et-headerCellSortIconContainer-width: 16px;
 $et-headerCellPopoverLink-size: 16px;
-$et-horizontalResizeHandler-width: 3px;
 
+$et-horizontalResizeHandler-width: 3px;
 $et-headerCellPopoverLink-margin: 2px;
+
 $et-cellContent-rightPadding: $et-headerCellPopoverLink-margin + $et-headerCellPopoverLink-size + $et-headerCellPopoverLink-margin + $et-horizontalResizeHandler-width;
 
 // Utils
@@ -202,6 +202,10 @@ $et-cellContent-rightPadding: $et-headerCellPopoverLink-margin + $et-headerCellP
 	}
 }
 
+.et-lazy-list-container {
+	position: relative;
+}
+
 // Important: Hides the horizontal scroll bar in the header
 .et-header-row::-webkit-scrollbar {
 	width: 0;
@@ -212,23 +216,23 @@ $et-cellContent-rightPadding: $et-headerCellPopoverLink-margin + $et-headerCellP
 	background-color: $et-backgroundColor-headerRow;
 }
 
+// Header Container
+// ----------------
+
+.et-header-container {
+	border-bottom: $et-borderSize-header solid $et-borderColor-header;
+}
+
 // Table Rows
 // ----------
 
 .et-table-row {
-	// Height and Width defined dynamically through JS
+	// JS defines height, width, top
 	position: absolute;
 	// TODO(Louis): Add class "selectable" to rows that can be selected
 	cursor: pointer;
 	> div {
 		height: 100%;
-	}
-}
-
-.et-lazy-list-container {
-	position: relative;
-	.et-table-row {
-		position: absolute;
 	}
 }
 
@@ -244,14 +248,10 @@ $et-cellContent-rightPadding: $et-headerCellPopoverLink-margin + $et-headerCellP
 .et-cell {
 	float: left;
 	height: 100%;
+	padding-left: $et-headerCellSortIconContainer-width;
 	// Important: We defined font-size: 0 in .tables-container due to the use
 	// of display-inline: block
 	font-size: $et-fontSize-body;
-	padding-left: $et-headerCellSortIconContainer-width;
-}
-
-.et-cell:first-child {
-	padding-left: $et-horizontalPadding-cell;
 }
 
 .et-cell.is-selected {
@@ -278,44 +278,30 @@ $et-cellContent-rightPadding: $et-headerCellPopoverLink-margin + $et-headerCellP
 	border-right: 0;
 }
 
-.et-left-table-block .et-cell {
-	margin-right: 0;
-	// This is not scalable for multiple frozen columns
-	margin-left: 0;
-}
-
-// TODO(Louis): Why do this?
-// .et-left-table-block .et-cell {
-//  border-right: $et-borderSize-body solid $et-borderColor-body !important;
-// }
-
 // Header Container
 // ----------------
 
+$et-sortableIndicator-color: rgba(0, 0, 0, .3);
+
+.et-header-container .ui-sortable {
+	position: relative;
+	height: 100%;
+	// JS sets width
+}
+
 .et-header-container {
-	overflow: hidden;
-	border-bottom: $et-borderSize-header solid $et-borderColor-header;
 	.ui-state-highlight {
 		position: relative;
-		left: -3px;
+		left: 0;
 		z-index: $et-zIndex + 100;
 		float: left;
 		width: 0;
 		height: 100%;
-		background-color: blue;
-	}
-	.ui-sortable {
-		position: relative;
-		width: 100%;
-		height: 100%;
 	}
 	.ui-sortable-helper {
-		background-color: green;
+		background-color: $et-sortableIndicator-color;
 		.et-content-container {
-			// display: none;
-		}
-		.ui-resizable-handle {
-			// background-color: brown;
+			color: $color-white;
 		}
 	}
 }
@@ -326,6 +312,24 @@ $et-cellContent-rightPadding: $et-headerCellPopoverLink-margin + $et-headerCellP
 	.ui-sortable {
 		// Dynamically set the width
 		overflow: hidden;
+	}
+}
+
+// Column Indicator
+// ----------------
+
+.et-column-sortable-indicator {
+	position: absolute;
+	top: 0;
+	left: -1px;
+	z-index: $et-zIndex + 1000;
+	width: 2px;
+	height: 100%;
+	background-color: $et-sortableIndicator-color;
+	opacity: 0;
+	transition: opacity .3s $transition-easing;
+	&.active {
+		opacity: 1;
 	}
 }
 
@@ -341,11 +345,11 @@ $et-cellContent-rightPadding: $et-headerCellPopoverLink-margin + $et-headerCellP
 	// Override the jQuery sortable
 	display: block !important;
 	padding: 0;
+	overflow: hidden;
 	font-size: $et-fontSize-header !important;
 	color: $et-color-header;
 	background-color: $et-backgroundColor-headerCell;
 	transition: background-color .3s $transition-easing;
-	overflow: hidden;
 	span {
 		line-height: 1;
 	}
@@ -361,8 +365,8 @@ $et-cellContent-rightPadding: $et-headerCellPopoverLink-margin + $et-headerCellP
 	transition: background-color .3s $transition-easing;
 	&.ui-resizable-e {
 		top: 0;
-		width: $et-horizontalResizeHandler-width;
 		bottom: 0;
+		width: $et-horizontalResizeHandler-width;
 		&:hover {
 			// Overide the cursor
 			cursor: col-resize;
@@ -399,21 +403,29 @@ $et-cellContent-rightPadding: $et-headerCellPopoverLink-margin + $et-headerCellP
 	color: $color-grey-800;
 }
 
-.et-header-cell:first-child {
-	padding-left: $et-horizontalPadding-cell - $et-headerCellSortIconContainer-width;
-}
+// Adjust the first column to have more space to the left of it. However,
+// causes a bug because the ui-state-highlight can be the first-child
+// .et-cell:first-child {
+// 	padding-left: $et-horizontalPadding-cell;
+// }
+// .et-header-cell:first-child {
+// 	padding-left: $et-horizontalPadding-cell - $et-headerCellSortIconContainer-width;
+// }
 
 // Sort Icon
 // ---------
 
 .et-sortIcon {
+	// IE needs this
+	display: inline-block;
 	width: $et-headerCellSortIconContainer-width;
-	// Make sure flexbox doesn't squeeze
-	flex-shrink: 0;
-	text-align: center;
 	padding-bottom: $et-verticalPadding-headerCell;
 	font-size: 16px;
 	line-height: 1.3;
+	text-align: center;
+	// Make sure flexbox doesn't squeeze
+
+	flex-shrink: 0;
 }
 
 // Header Popover Link
@@ -486,33 +498,15 @@ $et-cellContent-rightPadding: $et-headerCellPopoverLink-margin + $et-headerCellP
 .et-toggle.et-expand {
 	margin-top: -2px;
 	.et-toggle-icon {
-		padding-left: 0;
 		padding-top: 3px;
+		padding-left: 0;
 		opacity: 1;
 		transform: rotate(-90deg);
 	}
 }
 
-// Column Indicator
-// ----------------
-
-$et-sortableIndicator-color: rgba(0, 0, 0, .3);
-.et-column-sortable-indicator {
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: $et-zIndex + 1000;
-	width: 1px;
-	height: 100%;
-	visibility: hidden;
-	background-color: $et-sortableIndicator-color;
-	&.active {
-		visibility: visible;
-	}
-}
-
-// Levels
-// ------
+// Table Row
+// ---------
 
 .et-table-row {
 	min-width: 100%;
@@ -572,7 +566,7 @@ $et-sortableIndicator-color: rgba(0, 0, 0, .3);
 }
 
 .has-footerShadow .et-footer-container {
-	box-shadow: 0 -3px 3px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 -3px 3px rgba(0, 0, 0, .1);
 }
 
 // Deprecated
